# markdown-sheet

./: .gitignore  README.md  package-lock.json
.claude/: settings.local.json
docs/: model-setup.md
markdown-sheet/: index.html  package-lock.json  package.json  vite.config.ts
markdown-sheet/src/: App.css  App.tsx  types.ts
markdown-sheet/src-tauri/: Cargo.toml  tauri.conf.json
markdown-sheet/src-tauri/capabilities/: default.json
markdown-sheet/src-tauri/src/: commands.rs  file_watcher.rs  lib.rs  pty_manager.rs  rag_store.rs
markdown-sheet/src/components/: AiGenerateModal.tsx  EditorPanel.tsx  FileTree.css  FileTree.tsx  ImageCanvas.tsx  ImagePreviewToolbar.css  ImagePreviewToolbar.tsx  LeftPanel.tsx  MarkdownPreview.css  MarkdownPreview.tsx  MindmapEdge.tsx  MindmapEditor.css  MindmapEditor.tsx  MindmapNode.tsx  MindmapToolbar.css  MindmapToolbar.tsx  OfficePreview.css  OfficePreview.tsx  PreviewPanel.css  PreviewPanel.tsx  RagPanel.css  RagPanel.tsx  Settings.css  Settings.tsx  TabBar.css  TabBar.tsx  TableEditor.css  TableEditor.tsx  TableGridSelector.css  Terminal.css  Terminal.tsx  Toolbar.css  Toolbar.tsx  ZennFrontmatterForm.css  ZennFrontmatterForm.tsx  ZennNewArticleDialog.tsx  ZennPublishPanel.css  ZennPublishPanel.tsx
markdown-sheet/src/hooks/: useAiFeatures.ts  useDividerDrag.ts  useEditorFormatting.ts  useExport.ts  useFileFilters.ts  useImageCanvas.ts  useKeyboardShortcuts.ts  useLocalEmbedding.ts  useRagFeatures.ts  useRecentItems.ts  useScrollSync.ts  useSpeechToText.ts  useTheme.ts
markdown-sheet/src/lib/: callAI.ts  constants.ts  (+3 more)
(+1 files in other folders)
