[package]
name = "markdown-sheet"
version = "0.1.0"
edition = "2021"

[lib]
name = "markdown_sheet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "markdown-sheet"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
